--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ noodles-sam = { version = "0.76.0", features = ["async"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 futures = "0.3"
 num_cpus = "1.16"
+rayon = "1.10.0"
 
 [dev-dependencies]
 assert_cmd = "2.0"
