--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 futures = "0.3"
 num_cpus = "1.16"
 rayon = "1.10.0"
+plotters = "0.3.7"
 
 [dev-dependencies]
 assert_cmd = "2.0"
