--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ futures = "0.3"
 num_cpus = "1.16"
 rayon = "1.10.0"
 plotters = "0.3.7"
+chrono = "0.4.31"
 
 [dev-dependencies]
 assert_cmd = "2.0"
 tempfile = "3.10"
+chrono = "0.4.31"
